@@ -17,6 +17,9 @@ production.
   cache is used.
 
 === Bug fixes in 1.19 ===
+* $wgUploadNavigationUrl should be used for file redlinks if
+  $wgUploadMissingFileUrl is not set. The first was used for this
+  until the second was introduced in 1.17.
 
 === API changes in 1.19 ===
 * (bug 19838) siprop=interwikimap can now use the interwiki cache.
